--- a/style.css
+++ b/style.css
@@ -793,6 +793,12 @@ font-size: 2em;
 
 /* RESPONSIVE */
 /* Tablets and below */
+@media (min-width: 768px) and (max-width: 1024px){
+   .contact-container{
+    height: 85%;
+    width: 60% ;
+   }
+}
 @media (min-width: 480px) and (max-width: 768px){
   .hamburger {
     display: block;
