--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ html{
 /* NAVBAR */
 nav{
     width: 80%;
-    height: 60px;
     display: flex;
     padding: 0 .5em;
     justify-content: space-between;
@@ -68,18 +67,18 @@ nav ul li{
 }
 nav ul li a{
     text-decoration: none;
-    padding: .5em 1em;
+    padding: .6em 1em;
     color: white;
     border-radius: 10px;
     transition: .2s ease-in-out;
-    font-size: .8em;
+    font-size: .9em;
 }
 nav ul li a:hover{
     background-color: white;
     color: black;
     box-shadow: 0px 0px 10px white;
     font-weight: bold;
-        padding: .5em 1.3em;
+        padding: .6em 1.3em;
 
 }
 nav ul li a:active{
@@ -101,7 +100,7 @@ nav ul li a:active{
    transition: .15s ease-in-out;
     font-weight: bold;
     text-decoration: none;
-    font-size: .7em;
+    font-size: .9em;
 
 }
 .nav-contact:hover{
@@ -163,12 +162,14 @@ nav ul li a:active{
     width: 40%;
     height: 50vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-direction: column;
 }
 .content .text h2{
     color: white;
     font-size: 1.2em;
+    line-height: 0;
+
 }
 .content .text span{
     color: #C9A0FF;
@@ -180,11 +181,12 @@ nav ul li a:active{
     font-size: 3em; 
     font-family: monospace;
     font-weight: bold;
-    line-height: 0;
+  line-height: 0;
+  
 }
 .content .text p{
     color: white;
-    font-size:.85em;
+    font-size:1em;
 }
 .social-icons{
     width: 20%;
@@ -193,7 +195,7 @@ nav ul li a:active{
     gap: 1em;
 }
 .social-icons i{
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: #C9A0FF;
 }
 .social-icons i:hover{
@@ -544,7 +546,7 @@ font-size: 2em;
     font-size: 1.5em;
 }
 .gallery .cards .card .text p{
-    font-size: .7em;
+    font-size: .8em;
     line-height: 1.1;
     color: #EDE4FF;
 }
@@ -552,7 +554,7 @@ font-size: 2em;
     text-decoration: none;
     color: #1E002B;
     background-color: #C9A0FF;
-    padding: .5em 1em;
+    padding: 1em 1em;
     border-radius: 10px;
     border: none;
     width: 100%;
@@ -578,7 +580,7 @@ font-size: 2em;
   box-sizing: border-box;
   gap: 2em;
   padding: 2em 1em;
-  margin-top: 5em;
+  margin: 3em 0;
 }
  .contact-container {
       border-radius: 20px;
@@ -636,7 +638,7 @@ font-size: 2em;
     }
     
     input, textarea {
-      padding: 0.5em 1em;
+      padding: 1em 1em;
       border-radius: 12px;
       border: none;
       font-size: 1em;
@@ -721,7 +723,7 @@ footer{
 }
 .quick-links p{
   color: gray;
-  font-size: .8em;
+  font-size: .9em;
 }
 .quick-links ul{
   display: flex;
@@ -738,11 +740,11 @@ footer{
 .quick-links ul li a{
   text-decoration: none;
   color: gray;
-  font-size: .8em;
+  font-size: .9em;
  
 }
 .quick-links ul li a i{
-  margin-right: 1em;
+  margin-right: .7em;
 }
 .quick-links ul li a:hover{
 color:#c084fc ;
@@ -877,10 +879,12 @@ color:#c084fc ;
   }
     .hero .content .text h1{
         font-size: 2rem;
-      line-height: 1;
+      line-height: 1.3;
     }
   .hero .content .text h2{
     font-size: .8rem;
+          line-height: 1;
+
   }
   .hero .content .text p{
     text-align: left;
@@ -1027,3 +1031,15 @@ margin: 1.5em 0;
     margin: 0;
   }
 }
+
+
+
+
+
+
+@media (max-width: 480px){} ;
+@media (min-width: 480px) and (max-width: 768px){};
+@media (min-width: 768px) and (max-width: 1024px){};
+@media (min-width: 1024px) and (max-width: 1280px){};
+
+
