--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ nav ul li a:active{
 }
 .content .text p{
     color: white;
-    font-size:1em;
+    font-size:.8em;
 }
 .social-icons{
     width: 20%;
